[b][color=orange]v3.31[/color], 30.07.2018[/b][list]
[*]Fix the WorldMap Title Frame.
[*]Updated the Talent skin.
[*]Added back my time datatext.
[*]Fix the LFGListInviteDialog Role Icons.[/list]

[b][color=orange]v3.30[/color], 29.07.2018[/b][list]
[*]Added a panel to the chat to place the Voice Buttons.
[*]-> You have to do the setup for Chat & ActionBars again.
[*]Fixed some skin related issues/errors.
[*]Use the new ElvUI MapInfo Table to get coords. Thx Simpy <3.
[*]Remove the Raid Buff Reminder.[/list]

[b][color=orange]v3.29[/color], 18.07.2018[/b][list]
[*]Fix a nil error with linking Mythic Keystones.[/list]

[b][color=orange]v3.28[/color], 18.07.2018[/b][list]
[*]Prevent some rare nil errors with coords.[/list]

[b][color=orange]v3.27[/color], 17.07.2018[/b][list]
[*]8.0 Compatibily Version.
[*]For a full changelog have a look at: https://git.tukui.org/Merathilis/ElvUI_MerathilisUI/commits/development[/list]

[b][color=orange]v3.26[/color], 16.04.2018[/b][list]
[*]Prevent a rare nil error in my Styling function.
[*]Add a frame to display missing Flask, Food, Runes. Thx Exeil for the idea. <3
[*]Styled the ElvUI Databars.
[*]Fix an install error. *derp*
[*]Move the WorldStateAlwaysUpFrame a bit down, so it donts overlaps elements.
[*]ADD PEPE TO MY GAMEMENU!!
[*]Adjust the position for the Boss Frames and ObjectiveTracker.
[*]Add a DeadlyBossMods Profile and Skin.[/list]

[b][color=orange]v3.25[/color], 10.04.2018[/b][list]
[*]Remove the UIButton module.
[*]Create own UIButtons attached on the Left Chat Panel.
[*]The MicroBar hides now also in Pet Battle, if Combat hide is selected.
[*]Remove the right click function from the MicroBar.
[*]Add a "NoBackdrop" option to the Location Panel.
[*]Small Layout adjustments.[/list]

[b][color=orange]v3.24[/color], 07.04.2018[/b][list]
[*]Follow the recent BigWigs API changes and BigWigs Skin update.
[*]Add chat commands: /cleanboa = Remove Heirlooms from your bag.